add seeder, change some parametrs in swagger config file.
